Bug 1182783 - Restore search string and selection when selecting an autofilled urlbar popup result. r=mak